// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesPanel should render when there are answers 1`] = `
<PropertiesPanel__PropertiesPane>
  <PropertiesPanel__PropertiesPaneBody>
    <ScrollPane>
      <PropertiesPanel__PropertiesPanelTitle>
        Questionnaire properties
      </PropertiesPanel__PropertiesPanelTitle>
      <PropertiesPanel__PropertiesGroup>
        <Apollo(withEntityEditor(QuestionnaireProperties))
          questionnaire={
            Object {
              "__typename": "Questionnaire",
              "id": "1",
            }
          }
        />
      </PropertiesPanel__PropertiesGroup>
      <div>
        <PropertiesPanel__PropertiesPanelTitle>
          Answer properties
        </PropertiesPanel__PropertiesPanelTitle>
        <PropertiesPanel__PropertiesGroup>
          <div
            key="0"
          >
            <Apollo(AnswerProperties)
              answer={
                Object {
                  "__typename": "Answer",
                  "id": "1",
                  "index": 0,
                }
              }
              id="Answer1"
              key="1"
              onSubmit={[Function]}
            />
          </div>
          <div
            key="1"
          >
            <Apollo(AnswerProperties)
              answer={
                Object {
                  "__typename": "Answer",
                  "id": "2",
                  "index": 1,
                }
              }
              id="Answer2"
              key="2"
              onSubmit={[Function]}
            />
          </div>
        </PropertiesPanel__PropertiesGroup>
      </div>
    </ScrollPane>
  </PropertiesPanel__PropertiesPaneBody>
</PropertiesPanel__PropertiesPane>
`;

exports[`PropertiesPanel should render when there are no answers 1`] = `
<PropertiesPanel__PropertiesPane>
  <PropertiesPanel__PropertiesPaneBody>
    <ScrollPane>
      <PropertiesPanel__PropertiesPanelTitle>
        Questionnaire properties
      </PropertiesPanel__PropertiesPanelTitle>
      <PropertiesPanel__PropertiesGroup>
        <Apollo(withEntityEditor(QuestionnaireProperties))
          questionnaire={
            Object {
              "__typename": "Questionnaire",
              "id": "1",
            }
          }
        />
      </PropertiesPanel__PropertiesGroup>
    </ScrollPane>
  </PropertiesPanel__PropertiesPaneBody>
</PropertiesPanel__PropertiesPane>
`;
